# Electronic-Music-History

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
data/: edges.yaml  track_seeds.yaml
data/_wikidata/: _cp_titles.yaml  _cp_wd.yaml  _cp_wiki.yaml  candidates.yaml  raw.yaml  unclassified.yaml
data/_wikidata/classified/: acid.yaml  ambient.yaml  bass.yaml  breakbeat.yaml  disco.yaml  downtempo.yaml  drum_n_bass.yaml  electro.yaml  electroacoustic.yaml  garage.yaml  hardcore.yaml  hip_hop.yaml  house.yaml  industrial.yaml  progressive.yaml  techno.yaml  uk_garage.yaml  urban.yaml
data/genres/: acid.yaml  ambient.yaml  avantgarde.yaml  bass.yaml  breakbeat.yaml  disco.yaml  downtempo.yaml  drum_n_bass.yaml  early.yaml  electro.yaml  electroacoustic.yaml  garage.yaml  hardcore.yaml  hip_hop.yaml  house.yaml  industrial.yaml  pioneers.yaml  progressive.yaml  tech_house.yaml  techno.yaml  uk_garage.yaml  urban.yaml
docs/superpowers/plans/: 2026-05-23-electronic-music-history.md  2026-05-24-force-layout.md  2026-05-24-genre-expansion.md
pipeline/: build.py  classify_genres.py  fetch_genres.py  fetch_wikidata.py  import_genres.py  resolve_commons.py  schema.py
src/: main.js
src/controls/: filters.js  search.js
src/graph/: layout.js  renderer.js
src/panels/: audio.js  detail.js
src/styles/: main.css
tests/graph/: layout.test.js
tests/pipeline/: test_build.py  test_classify_genres.py  test_fetch_genres.py  test_fetch_wikidata.py  test_import_genres.py  test_resolve_commons.py
(+2 files in other folders)
